--- a/src/opengist-1.7.3_amd64/opengist_1.7.3_amd64/usr/share/doc/opengist/AUTHORS
+++ b/src/opengist-1.7.3_amd64/opengist_1.7.3_amd64/usr/share/doc/opengist/AUTHORS
@@ -14,4 +14,4 @@ Contributors:
 - Lucien Davison <github@ldavison>
 
 .deb Packaging:
-- Aetherinox <Aetherinox@thomiceli>
+- Aetherinox <Aetherinox@github>
